# advent-of-code

./: .gitignore  CONTRIBUTING.md  README.md  STRUCTURE.md  Taskfile.yml  create_day.py  pyproject.toml  requirements.txt  template.ipynb
.devcontainer/: devcontainer.json
.github/: dependabot.yml
2015/: day_01.ipynb  day_02.ipynb  day_03.ipynb  day_04.ipynb  day_05.ipynb  day_06.ipynb  day_07.ipynb  day_08.ipynb  day_09.ipynb  day_10.ipynb  day_11.ipynb  day_12.ipynb  day_13.ipynb  day_14.ipynb  day_15.ipynb  day_16.ipynb  day_17.ipynb  day_18.ipynb  day_19.ipynb  day_20.ipynb  day_21.ipynb  day_22.ipynb  day_23.ipynb  day_24.ipynb  day_25.ipynb
2016/: day_01.ipynb  day_02.ipynb  day_03.ipynb  day_04.ipynb  day_05.ipynb  day_06.ipynb  day_07.ipynb  day_08.ipynb  day_09.ipynb  day_10.ipynb  day_11.ipynb  day_12.ipynb  day_13.ipynb  day_14.ipynb  day_15.ipynb  day_16.ipynb  day_17.ipynb  day_18.ipynb  day_19.ipynb  day_20.ipynb  day_21.ipynb  day_22.ipynb  day_23.ipynb  day_24.ipynb  day_25.ipynb
2017/: day_01.ipynb  day_02.ipynb  day_03.ipynb  day_04.ipynb  day_05.ipynb  day_06.ipynb  day_07.ipynb  day_08.ipynb  day_09.ipynb  day_10.ipynb  day_11.ipynb  day_12.ipynb  day_13.ipynb  day_14.ipynb  day_15.ipynb  day_16.ipynb  day_17.ipynb  day_18.ipynb  day_19.ipynb  day_20.ipynb  day_21.ipynb  day_22.ipynb  day_23.ipynb  day_24.ipynb  day_25.ipynb
2018/: day_01.ipynb  day_02.ipynb  day_03.ipynb  day_04.ipynb  day_05.ipynb  day_06.ipynb  day_07.ipynb  day_08.ipynb  day_09.ipynb  day_10.ipynb  day_11.ipynb  day_12.ipynb  day_13.ipynb  day_14.ipynb  day_15.ipynb  (+10 more)
(+184 files in other folders)
